--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@700&family=Roboto+Mono:wght@400;700&display=swap');
 @import "../styles/globals.css";
 
 @layer base {
